Fix navbar dropdown gap by removing bottom padding from navbar-link

--- a/givefood/static/css/admin.css
+++ b/givefood/static/css/admin.css
@@ -13,9 +13,11 @@
   margin:5px 10px 5px 0;
   max-height:unset !important;
 }
+.navbar-item.has-dropdown .navbar-link {
+  padding-bottom:0;
+}
 .navbar-dropdown {
   border-top:0;
-  margin-top:-1px;
 }
 .main {
   padding:0 10px;
